posiGen_FullsendBox/src/objects/Formula_Result__c.object
<CustomObject>
    <fields>
        <fullName>PM_Tool_V2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Tool V2</label>
        <referenceTo>PM_Tool_V2__c</referenceTo>
        <relationshipLabel>Formula Results</relationshipLabel>
        <relationshipName>Formula_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Random_No__c</fullName>
        <label>Random No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Formula Result</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Formula Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>